--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "github-sync",
 	"name": "GitHub Sync",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"minAppVersion": "0.15.0",
 	"description": "Sync vault to personal GitHub.",
 	"author": "Kevin Chin",
-	"authorUrl": "https://kevch.in",
+	"authorUrl": "https://kevin.gd/",
 	"isDesktopOnly": true
 }
