--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "github-sync",
+	"name": "github-sync-vadim",
 	"version": "1.0.5",
 	"description": "Sync vault to personal GitHub.",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
+		"dev": "node  esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
@@ -22,6 +22,7 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"events": "^3.3.0",
 		"set-interval-async": "^3.0.3",
 		"simple-git": "^3.22.0"
 	}
