--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "github-sync-vadim",
-	"version": "1.0.5",
+	"name": "github-sync",
+	"version": "1.0.6",
 	"description": "Sync vault to personal GitHub.",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node  esbuild.config.mjs",
+		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
